--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 
 <body>
-  <h1>Zaina Khan</h1>
+  <title>Zaina Khan</title>
+  
   <p>Welcome to my portfolio!</p>
+  
 </body>
 
 </html>
