--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-  <title>Zaina Khan</title>
+  <header>Zaina Khan</header>
   
   <p>Welcome to my portfolio!</p>
   <a href="images/zainakhan.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/zainakhan.jpg" class="hoverZoomLink"></a>
