--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <html>
   
-<head>Zaina Khan</head>
+  <title>Jon Barron</title>
   
 <body>
-  <p>Welcome to my portfolio!</p>
-</body>
 <td style="padding:2.5%;width:63%;vertical-align:middle">
-  <p class="name" style="text-align: center;">
-     Zaina Khan
-  </p>
+  
+
+  
   <p>I am a Pakistani-American student at Florida Polytechnic University, seeking a Bachelor's Degree in Computer Science with a concentration in software engineering.
   </p>
   <p style="text-align:center">
@@ -19,5 +17,7 @@
   <td style="padding:2.5%;width:40%;max-width:40%"
     <a href="images/zainakhan.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/zainakhan.jpg" class="hoverZoomLink"></a>
   </td>
+</body>
+
   
 </html>
