--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html>
   
-  <title>Jon Barron</title>
+  <title>Zaina Khan</title>
   
 <body>
 <td style="padding:2.5%;width:63%;vertical-align:middle">
   
-
+  <p class="name" style="text-align: center;">
+  Zaina Khan
+  </p>
   
-  <p>I am a Pakistani-American student at Florida Polytechnic University, seeking a Bachelor's Degree in Computer Science with a concentration in software engineering.
+  <p> I am a Pakistani-American student at Florida Polytechnic University, seeking a Bachelor's Degree in Computer Science with a concentration in software engineering.
   </p>
   <p style="text-align:center">
     <a href="mailto:khanzainabusiness@gmail.com">Email</a> &nbsp;/&nbsp;
