--- a/index.html
+++ b/index.html
@@ -2,24 +2,27 @@
   
   <title>Zaina Khan</title>
   
-<body>
-<td style="padding:2.5%;width:63%;vertical-align:middle">
-  
-  <p class="name" style="text-align: center;">
-  Zaina Khan
-  </p>
-  
-  <p> I am a Pakistani-American student at Florida Polytechnic University, seeking a Bachelor's Degree in Computer Science with a concentration in software engineering.
-  </p>
-  <p style="text-align:center">
-    <a href="mailto:khanzainabusiness@gmail.com">Email</a> &nbsp;/&nbsp;
-    <a href="https://github.com/ZainaK05">Github</a>
-  </p>
-  </td>
-  <td style="padding:2.5%;width:40%;max-width:40%"
-    <a href="images/zainakhan.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/zainakhan.jpg" class="hoverZoomLink"></a>
-  </td>
-</body>
-
-  
+  <body>
+  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+      <tr style="padding:0px">
+        <td style="padding:0px">
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr style="padding:0px">
+              <td style="padding:2.5%;width:63%;vertical-align:middle">
+                <p class="name" style="text-align: center;">
+                  Zaina Khan
+                </p>
+                <p> I am a Pakistani-American student at Florida Polytechnic University, seeking a Bachelor's Degree in Computer Science with a concentration in software engineering.
+                </p>
+                <p style="text-align:center">
+                  <a href="mailto:khanzainabusiness@gmail.com">Email</a> &nbsp;/&nbsp;
+                  <a href="https://github.com/ZainaK05">Github</a>
+                </p>
+              </td>
+              <td style="padding:2.5%;width:40%;max-width:40%">
+                <a href="images/zainakhan.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/zainakhan.jpg" class="hoverZoomLink"></a>
+              </td>
+            </tr>
+          </tbody></table>
+          
 </html>
