--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <html>
+
+<head>
+<script type="text/javascript" src="particles.js"></script>
+<title>Particles.js Demo</title>
+</head>
+<body id="particles-js">
+<img src="circle.png" id="logo">
+</body>
   
   <title>Zaina Khan</title>
   
