--- a/index.html
+++ b/index.html
@@ -1,36 +1,64 @@
-<html>
+<!-- Document type declaration -->
+<!DOCTYPE html>
+
+<!-- Language specification is English -->
+<html lang = "en">
 
 <head>
-<script type="text/javascript" src="particles.js"></script>
-<title>Particles.js Demo</title>
+  <! -- Metadata character encoding -->
+  <meta charset = "UTF-8">
+  <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
+
+  <! -- Link to CSS -->
+  <link rel = "stylesheet" href = "style.css">
 </head>
-<body id="particles-js">
-<img src="circle.png" id="logo">
-</body>
+
+<!-- Header and navigation -->
+<body>
+  <header>
+    <h1> Zaina Khan </h1>
+    <nav>
+      <ul>
+        <li><a href = "#about" > About Me </a></li>
+        <li><a href = "#resume" > Resume </a></li>
+        <li><a href = "#contact" > Contact Me </a></li>
+        <li><a href = "#projects" > Projects </a></li>
+
+      </ul>
+    </nav>
+  </header>
+
+  <!-- About Me -->
+  <section id = "about">
+    <h2>About Me</h2>
+    <p> My name is Zaina Khan, a Computer Science major at Florida Polytechnic University specializing in software engineering.  </p>
+  </section>
+
+  <!-- Resume -->
+  <section id = "resume">
+    <h2> Resume </h2>
+    <a href = "Zaina Khan Resume (2025).pdf" download> Download My Resume</a>
+  </section>
+
+  <!-- Resume -->
+  <section id = "resume">
+    <h2> Resume </h2>
+    <p> Email: <a href = "mailto::khanzainabusiness@gmail.com"> khanzainabusiness@gmail.com </a></p>
+  </section>
+
+  <!-- Projects -->
+  <section id= "projects">
+    <h2> Projects </h2>
+    <div class = "project" >
+      <h3> Project Title </h3>
+      <p> Description of Project </p>
+      <a href = "link-to-project"> View Project </a>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2024 Zaina Khan</p>
+  </footer>
   
-  <title>Zaina Khan</title>
-  
-  <body>
-  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-      <tr style="padding:0px">
-        <td style="padding:0px">
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <tr style="padding:0px">
-              <td style="padding:2.5%;width:63%;vertical-align:middle">
-                <p class="name" style="text-align: center;">
-                  Zaina Khan
-                </p>
-                <p> I am a Pakistani-American student at Florida Polytechnic University, seeking a Bachelor's Degree in Computer Science with a concentration in software engineering.
-                </p>
-                <p style="text-align:center">
-                  <a href="mailto:khanzainabusiness@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/ZainaK05">Github</a>
-                </p>
-              </td>
-              <td style="padding:2.5%;width:40%;max-width:40%">
-                <a href="images/zainakhan.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/zainakhan.jpg" class="hoverZoomLink"></a>
-              </td>
-            </tr>
-          </tbody></table>
-          
+</body>      
 </html>
