--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
   <header>
     <h1> Zaina Khan </h1>
     <nav>
-      <ul>
-        <li><a href = "#about" > About Me </a></li>
-        <li><a href = "#resume" > Resume </a></li>
-        <li><a href = "#contact" > Contact Me </a></li>
-        <li><a href = "#projects" > Projects </a></li>
+      <ul> 
+        <!-- Buttons -->
+        <li><button onclick = "showSelection('about')"> About Me </button></li>
+        <li> <button onclick = "showSelection('resume')"> Resume </button></li>
+        <li> <button onclick = "showSelection('contact')"> Contact Me </button></li>
+        <li> <button onclick = "showSelection('projects')"> Projects </button></li>
+
+
+
 
       </ul>
     </nav>
