--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <nav>
       <ul> 
         <!-- Buttons -->
-        <li><button onclick = "showSelection('about')"> About Me </button></li>
-        <li> <button onclick = "showSelection('resume')"> Resume </button></li>
-        <li> <button onclick = "showSelection('contact')"> Contact Me </button></li>
-        <li> <button onclick = "showSelection('projects')"> Projects </button></li>
+        <li><button onclick = "showSection('about')"> About Me </button></li>
+        <li> <button onclick = "showSection('resume')"> Resume </button></li>
+        <li> <button onclick = "showSection('contact')"> Contact Me </button></li>
+        <li> <button onclick = "showSection('projects')"> Projects </button></li>
 
 
 
