--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </section>
 
   <!-- Resume -->
-  <section id = "resume">
+  <section id = "contact">
     <h2> Resume </h2>
     <p> Email: <a href = "mailto::khanzainabusiness@gmail.com"> khanzainabusiness@gmail.com </a></p>
   </section>
@@ -69,7 +69,7 @@
       });
 
       // Show sections
-      var selectedSection = document.getElementByID(sectionId);
+      var selectedSection = document.getElementById(sectionId);
       selectedSection.classList.add('active');
     }
   </script>
