--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </section>
 
   <script>
-    function showSection(sectionID) {
+    function showSection(sectionId) {
       // Hide sectionss
       var sections = document.querySelectorAll('section');
       sections.forEach(function(section) {
