--- a/index.html
+++ b/index.html
@@ -20,14 +20,10 @@
     <nav>
       <ul> 
         <!-- Buttons -->
-        <li><button onclick = "showSection('about')"> About Me </button></li>
-        <li> <button onclick = "showSection('resume')"> Resume </button></li>
-        <li> <button onclick = "showSection('contact')"> Contact Me </button></li>
-        <li> <button onclick = "showSection('projects')"> Projects </button></li>
-
-
-
-
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="contact.html">Contact Me</a></li>
+        <li><a href="projects.html">Projects</a></li>
       </ul>
     </nav>
   </header>
