--- a/contact.html
+++ b/contact.html
@@ -26,10 +26,10 @@
     </nav>
   </header>
 
-  <!-- Resume -->
-  <section id = "resume">
+  <!-- Contact Me -->
+  <section id = "contact">
     <h2> Resume </h2>
-    <a href = "Zaina Khan Resume (2025).pdf" download> Download My Resume</a>
+    <p> Email: <a href = "mailto::khanzainabusiness@gmail.com"> khanzainabusiness@gmail.com </a></p>
   </section>
 
   <footer>
