--- a/about.html
+++ b/about.html
@@ -8,6 +8,9 @@
   <!-- Metadata character encoding -->
   <meta charset = "UTF-8">
   <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
+
+  <!-- Link to CSS -->
+  <link rel = "stylesheet" href = "style.css">
   
 </head>
 
